# hil-cosim-integration

./: .gitignore  LICENSE  README.md  gridfile.json  helperutils.py  main.py  pyproject.toml
modbus/: batteryemulator.py  better_client.py  modbus_client.py  modbus_metadata.csv  modbus_server.py
modbushil/: configurationmanager.py  datatype.py  iotype.py  mappingmanager.py  methodinvoker.py  modbusclientmanager.py  modbusintegrationsettings.py  modbusiobundlesconfiguration.py  modbusregistertypes.py  registerhelpers.py  registerrange.py  siminterface.py  variablemapping.py
scenario/: gridfactory.py  scenariofactory.py
simulators/: batterymetainfo.py  batteryreal.py  batterysim.py  controllersim.py  debugsim.py  electricvehical.py  evsim.py  mysim.py
tests/: batteryemulator.py  scenario_for_presentation.py  test_methodinvoker.py  test_modbusclientmanager.py  test_modbusintegrationsettings.py
tests/helpers/: batteryemulator.py
tests/scenariotests/: scenario_for_presentation.py
tests/simulators/: batterysim.py  controllersim.py  debugsim.py  evsim.py
tests/unittests/: test_methodinvoker.py  test_modbusclientmanager.py  test_modbusiobundlesconfiguration.py  test_registerhelpers.py  test_registerrange.py
