[project]
name = "hil-cosim-integration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mosaik>=3.5.0",
    "mosaik-api-v3>=3.0.13",
    "mosaik-csv>=2.0.1",
    "mosaik-pandapower-2>=0.3.1",
    "mosaik-pvgis>=1.2.3",
    "mosaik-web>=0.4.0",
    "numba>=0.62.1",
    "pandapower>=3.2.1",
    "pymodbustcp>=0.3.0",
    "python-dotenv>=1.2.1",
    "schedule>=1.2.2",
    "setuptools>=80.9.0",
]
